# book-expert

./: .gitignore  CLAUDE.md  README.md  cite.py  preferences.yaml  pyproject.toml  save_qa.py  voyage-fr.csv
bertalign/: aligner.py
books/portnoy/: CLAUDE.md  book.yaml  prompt_knowledge_base_builder.md
books/voyage/: CLAUDE.md  agent.py  book.yaml  preferences.yaml
books/voyage2/: CLAUDE.md  book.yaml  prompt_knowledge_base_builder.md
books/voyage2_plus_it/: CLAUDE.md  book.yaml
docs/: adding-a-new-book.md  knowledge-base-guide.md  llm-training-dataset-guide.md  prompt-generate-knowledge-base.md
docs/plans/: 2026-03-27-multi-book-refactor-design.md  2026-03-27-multi-book-refactor-impl.md  2026-03-29-bilingual-alignment-design.md  2026-03-29-bilingual-alignment-impl.md  2026-03-31-critical-essays-design.md  2026-03-31-critical-essays-impl.md  2026-04-02-essay-integration-refactor.md  2026-04-04-llm-routing-design.md
knowledge/answers/: 2026-03-23_approcci-sessuali-bardamu-madelon.md  2026-03-23_compagna-di-robinson.md  2026-03-23_prime-parole-madelon.md
knowledge/tier_1/: 05_style.md  08_qa_cache.md
knowledge/tier_2/: 02_03_guerra_notte.md  02_04_guerra_robinson.md  (+3 more)
lib/: __init__.py  aggregate_essay_index.py  cite.py  cite_essay.py  extract_fields.py  generate_claude_md.py  generate_training_data.py  generate_training_data_llm.py  load_arc.py  loader.py  save_qa.py
src/: agent.py  loader.py
tests/: conftest.py  test_aggregate_essay_index.py  test_align.py  test_cite.py  test_cite_essay.py  test_generate.py  test_loader.py  test_save_qa.py
(+195 files in other folders)
