[project]
name = "book-expert"
version = "0.2.0"
description = "Multi-book literary expert system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "anthropic",
    "pymupdf>=1.27.2.2",
    "sentence-transformers",
    "faiss-cpu",
    "sentence-splitter",
    "numba",
    "langdetect",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["lib*", "bertalign*"]
